# LibreOfficePlagin

./: .gitignore  README.md
 FunctionsTask/Functions/: FuncFactory.h  PolynomFunc.h  PowerFunc.cpp
FunctionsTask/: CMakeLists.txt  NewOperators.h  Root.h  main.cpp
FunctionsTask/ArithmeticFuncs/: BaseArithmetic.h  Diff.cpp  Diff.h  Div.cpp  Div.h  Mul.cpp  Mul.h  Sum.cpp  Sum.h
FunctionsTask/Functions/: BaseFunc.h  ExponentFunc.cpp  FuncFactory.h  PolynomFunc.cpp  PolynomFunc.h
FunctionsTask/Google_tests/: ArithmeticTests.cpp  CMakeLists.txt  ExponentialTests.cpp  PolynomialTests.cpp
GeneticAlgTask/: CMakeLists.txt  Cycle.cpp  Cycle.hpp  Genetic.cpp  Genetic.hpp  MainCycle.cpp  main.cpp  task.txt
GeneticAlgTask/Script/: Script.py  series_1_run_2.txt  series_2_run_0_sol_after100.txt  series_2_run_2.txt
GeneticAlgTask/script/: series_0_run_0.txt  series_0_run_0_sol_after100.txt
LibreOfficeTask/: Addons.xcu  Makefile  ProtocolHandler.xcu  addon.cxx  my_addition.cxx  my_addition.h
SimulatedAnnealing/: CMakeLists.txt  Generator.cpp  Structures.h  main.cpp
SimulatedAnnealing/Mutation/: Mutation.cpp
SimulatedAnnealing/Simulating/: Simulating.h  Simulating_parralel.h
SimulatedAnnealing/Temperature/: Temperature.h
Simulated_annealing/: CMakeLists.txt  Structures.h  main.cpp
Simulated_annealing/Generator/: Generator_csv.cpp  Generator_csv.h
Simulated_annealing/Mutation/: Mutation.cpp  Mutation.h
Simulated_annealing/Script/: MultiStarting.py
Simulated_annealing/Simulating/: Simulating.h  Simulating_parralel.h
Simulated_annealing/Temperature/: Temperature.cpp  Temperature.h
